cmake_minimum_required (VERSION 2.8)
project(SimIN)
set (NOGLOB      FALSE CACHE BOOL "Build without glob file search - turn this on to support massive parallelism.")
set (USE_PTHREADS FALSE CACHE BOOL "Build threaded library.")
load_cache(../)
IF(NOT ENABLE_MPI)
  add_definitions( -DDUMMY_MPI )
ELSE()
  FIND_PACKAGE(MPI REQUIRED)
  add_definitions( -DMPICH_IGNORE_CXX_SEEK )
  INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
ENDIF()
IF(NOGLOB)
  add_definitions( -D_NO_GLOB_ )
ENDIF()
IF(USE_PTHREADS)
  add_definitions( -DUSE_PTHREADS )
ENDIF()

#INCLUDE(CTest)

#find_library(DL_LIB dl)
find_library(HDF4_LIB df HINT /usr/lib64/hdf)
find_library(MFHDF_LIB mfhdf HINT /usr/lib64/hdf)
find_library(ZLIB z)
find_path(HDF4_INC hdf.h HINT /usr/include/hdf)
find_library(JPEG_LIB jpeg)
find_library(PTHREAD_LIB pthread)
find_path(COM_INC com.h HINT ../../COM/include)
find_library(SZIP_LIB sz)

set(LINK_LIBS ${HDF4_LIB} ${MFHDF_LIB})
IF(JPEG_LIB)
  set (LINK_LIBS ${LINK_LIBS} ${JPEG_LIB})
ENDIF()
IF(ZLIB)
  set (LINK_LIBS ${LINK_LIBS} ${ZLIB})
ENDIF()
IF(SZIP_LIB)
  set (LINK_LIBS ${LINK_LIBS} ${SZIP_LIB})
ENDIF()

set (SimIN_SRCS src/Rocin.C src/read_parameter_file.C)
IF(NOGLOB)
  set (SimIN_SRCS ${ROCIN_SRCS} src/Directory.C)
ENDIF()
set (TEST_SRCS test/intest1.C test/intest2.C test/printin.C test/param_test.C)
set (UTIL_SRCS util/hdf2plt.C util/printfeas.C util/hdf2vtk.C util/hdf2pltV2.C util/sepin.C util/plagprep.C)
set (RHDF4_SRCS src/HDF4.C)
IF(USE_PTHREADS)
set (RHDF4_SRCS ${RHDF4_SRCS} src/Sync.C)
ENDIF()
set (ALL_SRCS "${SimIN_SRCS} ${TEST_SRCS} ${UTIL_SRCS} ${RHDF4_SRCS}")
set(LIB_SRCS ${SimIN_SRCS})
#set (TEST_SRCS test/maptest.C)
set_source_files_properties(${ALL_SRCS} PROPERTIES COMPILE_FLAGS "-fPIC ${MPI_CXX_COMPILE_FLAGS}" )
#set(TEST_SRCS src/COMTest.C)

# rpath settings
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

include_directories(include ${CMAKE_BINARY_DIR}/include ${HDF4_INC} ${COM_INC})

IF(NOT BUILD_STATIC)
  add_library(SimIN SHARED ${SimIN_SRCS})
  add_library(RHDF4 SHARED ${RHDF4_SRCS})
  #target_link_libraries(RHDF4 ${HDF4_LIB} ${MFHDF_LIB} ${JPEG_LIB} ${SZIP_LIB} ${ZLIB})
  target_link_libraries(RHDF4 ${LINK_LIBS})
  target_link_libraries(SimIN RHDF4)
ELSE()
  add_library(SimIN STATIC "${ROCIN_SRCS} ${RHDF4_SRCS}")
  add_definitions( -DSTATIC_LINK )
  #target_link_libraries(SimIN ${HDF4_LIB} ${MHDF_LIB} ${JPEG_LIB} ${ZLIB})
  target_link_libraries(SimIN ${LINK_LIBS})
ENDIF()
IF(ENABLE_CGNS)
    target_link_libraries(SimIN ${CGNS_LIB} ${HDF5_LIBRARIES})
ENDIF()
target_link_libraries(SimIN SITCOM)
IF(USE_PTHREADS)
  target_link_libraries(SimIN PTHREAD_LIB)
ENDIF()
TARGET_LINK_LIBRARIES(SimIN ${MPI_CXX_LIBRARIES})
TARGET_LINK_LIBRARIES(RHDF4 ${MPI_CXX_LIBRARIES})
SET_TARGET_PROPERTIES(SimIN PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
SET_TARGET_PROPERTIES(RHDF4 PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
# Test executables
add_executable(intest1 test/intest1.C)
target_link_libraries(intest1 SimIN)
add_executable(intest2 test/intest2.C)
target_link_libraries(intest2 SimIN)
add_executable(printin test/printin.C)
target_link_libraries(printin SimIN)
add_executable(param_test test/param_test.C)
target_link_libraries(param_test SimIN)

# Utilities
add_executable(hdf2plt util/hdf2plt.C)
target_link_libraries(hdf2plt SimIN)
add_executable(printfeas util/printfeas.C)
target_link_libraries(printfeas SimIN)
add_executable(hdf2vtk util/hdf2vtk.C)
target_link_libraries(hdf2vtk SimIN)
#add_executable(hdf2pltV2 util/hdf2pltV2.C)
#target_link_libraries(hdf2pltV2 Rocin)
add_executable(sepin util/sepin.C)
target_link_libraries(sepin SimIN)
add_executable(plagprep util/plagprep.C)
target_link_libraries(plagprep SimIN)
add_executable(winstat util/winstat.C)
target_link_libraries(winstat SimIN)
SET_TARGET_PROPERTIES(intest1 PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
SET_TARGET_PROPERTIES(intest2 PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
SET_TARGET_PROPERTIES(printin PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
SET_TARGET_PROPERTIES(param_test PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
SET_TARGET_PROPERTIES(hdf2plt PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
SET_TARGET_PROPERTIES(printfeas PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
SET_TARGET_PROPERTIES(hdf2vtk PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
SET_TARGET_PROPERTIES(winstat PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")

#ADD_TEST(RunAllTests ${EXECUTABLE_OUTPUT_PATH}/testx testresults.txt)
#ADD_TEST(TestObject:ValidHandle ${TEST_RESULTS} TestObject:ValidHandle testresults.txt)
#ADD_TEST(TestObject:Exists ${TEST_RESULTS} TestObject:Exists testresults.txt)

INSTALL(TARGETS SimIN RHDF4 hdf2plt printfeas hdf2vtk sepin plagprep RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
